--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div class="row first-container">
         <div class="col-lg-4 col-md-12">
             <img class="profile-picture" src="images/profile.jpg" alt="iphone-mockup">
+            <h2 style="padding-left: 8%; padding-bottom: 4%;">Telefon: +36 30 254 4412</h2>
         </div>
         <div class="intro-1 col-lg-5 col-md-6">
             <h1 clas="hope">Marsó János</h1>
@@ -146,16 +147,50 @@
                     <!-- The slideshow -->
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <div class="iframe-container"><iframe class="youtube" width="420px" height="315px" src="https://www.youtube.com/embed/MSvbdC-g71Q" title="Gáspárdy Alexandra -  Fúj a szél" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </div>                  </div>
+                        <div class="iframe-container"><iframe class="youtube" width="420px" height="315px" src="https://www.youtube.com/embed/MSvbdC-g71Q" title="Gáspárdy Alexandra -  Fúj a szél" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </div>                 
+                        <div class="row">
+                          <div class="col-lg-6" style="padding: 2%">
+                              <h2 style="color: white;">Marsó János</h2>
+                              <h2 style="color: white;">Zeneszerző és szövegíró</h2>
+                          </div>
+                          <div class="col-lg-6" style="padding: 2%">
+                            <h2 style="color: white;">Ember Péter</h2>
+                            <h2 style="color: white;">Hangszerelő</h2>
+                        </div>
+                          </div>
+                        </div>
                       <div class="carousel-item">
                         <div class="iframe-container"><iframe width="420" height="315" src="https://www.youtube.com/embed/PnrfaE6Rjg4" title="Igazi tanc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                        <div class="row">
+                          <div class="col-lg-6" style="padding: 2%">
+                              <h2 style="color: white;">Marsó János</h2>
+                              <h2 style="color: white;">Zeneszerző</h2>
+                          </div>
+                          <div class="col-lg-6" style="padding: 2%">
+                            <h2 style="color: white;">Ember Péter</h2>
+                            <h2 style="color: white;">Szövegíró</h2>
                         </div>
+                          </div>
+                      </div>
                         <div class="carousel-item">
                             <div class="iframe-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/7X_J2gmpqjE" title="Mindig visszatalálsz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-                            </div>
+                            <div class="row">
+                              <div class="col-lg-12" style="padding: 2%">
+                                  <h2 style="color: white;">Marsó János</h2>
+                                  <h2 style="color: white;">Zeneszerző</h2>
+                              </div>
+                              
+                              </div>  
+                          </div>
                             <div class="carousel-item">
                                 <div class="iframe-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/ceYIkBtbpNk" title="A szeretet hangja" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-                                </div>
+                                <div class="row">
+                                  <div class="col-lg-12" style="padding: 2%">
+                                      <h2 style="color: white;">Marsó János</h2>
+                                      <h2 style="color: white;">Zeneszerző</h2>
+                                  </div>
+                                  </div> 
+                              </div>
                     </div>
                   
                     <!-- Left and right controls -->
